# university

./: .gitignore  AVLTree.java  Assign1.java  Assign2.java  Assignment1.cpp  Assignment2.cpp  Assignment4.java  CMakeLists.txt  CS3450_midterm.tex  CS5050_HW1.docx  CS5050_HW4.docx  CS5050_HW6.docx  Deck.py  Dwarf.java  Game.java  GregorianDate.java  LICENSE  LifeSimulator.java  Lists.hs  Main.hs  Main.java  Prog4Echo.docx  Program 0-1.docx  Quadratic.java  Queue.java  Quiz_3_4410.tex  README.md  Segregation.py  State.java  Task-2.java  TaskX.java  TestDistributions.cpp  TestPerformance.cpp  TestSched.java  Tree.java  TreeTester.java  WordTree.hpp  acronyms.md  build.gradle  build.gradle.kts  (+60 more)
2024_Fall_CS5060_Midterm/: CS3450_midterm.tex
Docs/: plan.md
Learning/: notes.txt
Testing/: TestListPairApply.hs  TestOrder.hs  TestPadovanNumbers.hs  TestPairUp.hs  TestRunLengthEncoding.hs  TestWoodallNumbers.hs
cs1400_intro_to_computer_science/program4_drawing_a_chess_borad_playing_around_with_shapes_and_geometry/: chessboard.py
cs1400_intro_to_computer_science/program6_first_go_at_lists_making_a_desk_of_cards_as_an_object_make_a_orbian_family_as_a_object/: card.py  deck.py  gronkyutil.py  orbian.py  task1.py  task3.py  task4.py
cs1410_intro_to_computer_science_2/program5_calendar/: JulianDate.java
cs1410_intro_to_computer_science_2/program6_better_calender/: GregorianDate.java
cs1410_intro_to_computer_science_2/program7_the_game_of_life/: ConwaysLife.java  PatternAcorn.java  PatternBlinker.java  PatternBlock.java  PatternGlider.java
cs1440_software_engineering_fundamentals/program0_function_plotter/: plotter.py
cs1440_software_engineering_fundamentals/program4_bingo_card_generator/: RandNumberSet.py  runTests.py
cs2420_algorithms_and_data_structures/program2_recurtion_practices/: TreeTester.java
cs3100_operating_systems_and_concurrency/program3_custom_command_shell/: README.md
cs3100_operating_systems_and_concurrency/program4_computing_the_digits_of_pi_in_parallel/: LICENSE
cs3100_operating_systems_and_concurrency/program6_page_replacement_algorithms/: build.gradle.kts
cs3460_modern_c_plus_plus/exam_study_guide/: .gitignore
cs3460_modern_c_plus_plus/program1_first_go_at_c_with_nbonacci_numbers/: Assignment1.cpp
cs5050_advanced_algorithms_and_data_structures/program3_advanced_selection_algorithms/: CS5050_HW3.docx
cs5060_decision_making_algorithms_under_uncertainty/program1_optimal_stopping_algorithms/: README.md
cs5060_decision_making_algorithms_under_uncertainty/program3_options_as_a_financial_tool/: instructions.md
cs5060_decision_making_algorithms_under_uncertainty/program4_reinforcement_learning/: requirments.md
cs5110_multi_agent_systems/program4_voting_systems_simulation/: README.md
cs5260_cloud_development/program3_program2_continued/: Dockerfile
cs5700_design_patterns/program1_shapes_library_using_the_strategy_pattern/: settings.gradle.kts
cs5700_design_patterns/program3_consinuation_of_program_2_strategy_observer_singleton_and_factory_patterns_websockets/: README.md  settings.gradle.kts
cs5700_design_patterns/program4_computer_emulator_program_of_the_d5700/: README.md
cs5700_design_patterns/program5_regular_expression_state_machines/: build.gradle.kts
data/: Employers.txt  generate.py  save.csv  shipments1.txt  shipments2.txt  stock1.csv  stock2.csv  tasksetA.txt  tasksetB.txt  tasksetC.txt  tasksetD.txt  tasksetE.txt  test.txt
data/scenario1/: Applicants.txt
data/scenario2/: Employers.txt
data/scenario4/: Applicants.txt  Employers.txt
doc/: Manual.md  Plan.md  Reviews.md  Signature.md
doc/NatesSaves/: EvenSizeDeck.txt
docs/: Program 0 Discussion-4.pptx  instructions.md  plan.md  requirements.md  requirements.txt
gradle/wrapper/: gradle-wrapper.properties
learn/: learn.dart
lsn/1-TextProcessing/: ex2.py  ex3.py
lsn/2-FileOperations/: ex1.py  ex2.py
math/: README.md  settings.gradle.kts
math/app/: build.gradle.kts
math4410_advanced_discrete_math/quiz1/: Quiz_1_4410.tex
mysite/: db.sqlite3
mysite/blog/: urls.py  (+1 more)
notes/: acronyms.md  chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  main.md
quiz/: all_questions.json  pyproject.toml  questions.json  questions2.json
roms/: fibonacci.out
src/: AVLTree.java  Assign3.java  Assign6.java  Assn2.java  BinPacking.java  Board.java  Disk.java  Dwarf.java  Game.java  GameStarter.java  Graph.java  Grid.java  HashTable.java  Help.java  HexGame.java  LifeSimulator.cpp  LifeSimulator.hpp  Lists.hs  Lists.kt  Main.cpp  Main.java  Main.kt  MonteCarloSimulation.java  Platform.java  Process.java  Queue.java  Scheduler.java  SchedulerFCFS.java  SchedulerPriority.java  SchedulerRR.java  SchedulerSJF.java  SchedulerSRTF.java  SliderGame.java  State.java  Task.java  TaskFIFO.java  TaskLRU.java  TaskMRU.java  TeaCupSet.java  Test.java  (+34 more)
test/: TestDistributions.cpp  TestWordTree.cpp  test_producer.py
tests/: test_consumer.py
unit_tests/: test.py
usu/usu_cs5060_program3/: .gitignore  pyproject.toml
usu/usu_cs5060_program3/src/: main.py
usu_cs1400_program1/: README.md
usu_cs1400_program2/: task2.py  task3.py
usu_cs1400_program3/: README.md  task1.py
usu_cs1400_program6/: README.md
usu_cs1400_program7/: task1.py  task2.py
usu_cs1410_program1/: ISBN.java
usu_cs1410_program3/: Inside.java
usu_cs1410_program6/: Assign6.java
usu_cs1440_program3/: bigData.py
usu_cs1440_program4/: Card.py  UserInterface.py
usu_cs2420_program2/: Tree.java
usu_cs2610_program0/: about.html
usu_cs2610_program1/: about.html  server.py
usu_cs2610_program3/: README.md
usu_cs2610_program5/: script.js  style.css
usu_cs3100_program2/: build.gradle
usu_cs3100_program3/: build.gradle
usu_cs3100_program4/: README.md
usu_cs3460_program2/: .gitignore  Assignment2.cpp
usu_cs3460_program3/: distributions.cpp  distributions.hpp
usu_cs4700_program1/: myHypotrochoidTest.ps
usu_cs4700_program3/: castle.pl
usu_cs5060_program3/: README.md
usu_math4110_quiz2/: Quiz_2_4410.tex
usu_math4410_exam2/: main.tex
usu_math4410_quiz4/: Quiz_4_4410.tex
(+881 files in other folders)
